[package]
name = "ip_sniffer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand="0.8.5"

# tokio = { version = "1",features = ["full"]}
# bpaf = {version = "0.9.2", features = ["derive", "bright-colour"]}  